youtube video added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     font-src 'self' https://fonts.gstatic.com;
     connect-src 'self' https://cloud.appwrite.io https://sgp.cloud.appwrite.io https://openrouter.ai https://api.openai.com https://api.anthropic.com;
     img-src 'self' data: blob: https://cloud.appwrite.io https://sgp.cloud.appwrite.io https://*.appwrite.io;
+    frame-src 'self' https://www.youtube.com https://www.youtube-nocookie.com;
   ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Agentic Carousel Generator</title>
