--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src 'self' https://fonts.gstatic.com;
     connect-src 'self' https://cloud.appwrite.io https://sgp.cloud.appwrite.io https://openrouter.ai https://api.openai.com https://api.anthropic.com;
-    img-src 'self' data: blob: https://cloud.appwrite.io https://sgp.cloud.appwrite.io https://*.appwrite.io;
+    img-src 'self' data: blob: https://cloud.appwrite.io https://sgp.cloud.appwrite.io https://*.appwrite.io https://image.pollinations.ai;
     frame-src 'self' https://www.youtube.com https://www.youtube-nocookie.com;
   ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
