--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://aistudiocdn.com https://esm.sh;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src 'self' https://fonts.gstatic.com;
-    connect-src 'self' https://cloud.appwrite.io https://sgp.cloud.appwrite.io https://openrouter.ai https://api.openai.com https://api.anthropic.com;
+    connect-src 'self' https://cloud.appwrite.io https://sgp.cloud.appwrite.io https://openrouter.ai https://api.openai.com https://api.anthropic.com https://api.tavily.com;
     img-src 'self' data: blob: https://cloud.appwrite.io https://sgp.cloud.appwrite.io https://*.appwrite.io https://image.pollinations.ai;
     frame-src 'self' https://www.youtube.com https://www.youtube-nocookie.com;
   ">
